welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: '=' expected but ';' found.
  var v;w;x;y;z=0;0;0;0;0
       ^