welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
  var v;w;x;y;z=0;0;0;0;0
  if (a>=13 && a<=19){
    v=1
  } else if (b>=13 && b<=19){
    w=1
  } else if (c>=13 && c<=19){
    x=1
  } else if (d>=13 && d<=19){
    y=1
  }
  z=v+w+x+y
  return z
}